--- a/web/app/templates/home.html
+++ b/web/app/templates/home.html
@@ -17,14 +17,6 @@
                 <ul>
                     <li>session1</li>
                     <li>session2</li>
-                    <li>session1</li>
-                    <li>session2</li>
-                    <li>session1</li>
-                    <li>session2</li>
-                    <li>session1</li>
-                    <li>session2</li>
-                    <li>session1</li>
-                    <li>session2</li>
                 </ul>
             </div>
             <div class="greeting">
@@ -33,7 +25,7 @@
             <div class="interaction">
                 <div id="buttons">
                     <div id="session-button">
-                        <button id="into-session">Ask Questions Right now!</button>
+                        <button id="into-session">Ask Questions Right now!></button>
                         <button id="make-session">Create a Session</button>
                     </div>
                 </div>
