--- a/web/app/templates/index.html
+++ b/web/app/templates/index.html
@@ -15,7 +15,7 @@
         </header>
         <main>
             <div class="quoto">
-                <p>대충 명언 12</p>
+                <p></p>
             </div>
             <div class="interaction">
                 <div id="login">
@@ -46,5 +46,6 @@
             </div>
         </footer>
         <script src="../static/js/login.js"></script>
+        <script src="../static/js/quoto.js"></script>
     </body>
 </html>
