--- a/web/app/static/css/colorset.css
+++ b/web/app/static/css/colorset.css
@@ -3,4 +3,7 @@
     --kgu-red: #E95504;
     --kgu-green: #00A051;
     --kgu-blue: #004EA2;
+    --kgu-light-gray: #f7f9fc;
+    --kgu-dark-gray: #333;
+    --kgu-light-blue: #66a3e3;
 }
