--- a/web/app/templates/history.html
+++ b/web/app/templates/history.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="ko">
     <head>
-
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="../static/css/history-style.css">
     </head>
     <body>
         <header>
@@ -16,12 +17,13 @@
                 <button>내가 한 대답 보기</button>
                 <button>저장한 질의응답 보기</button>
             </div>
-            <div>
+            <div id="content-output">
                 <p>리스트 출력</p>
             </div>
         </main>
         <footer>
 
         </footer>
+        <script src="../static/js/history.js"></script>
     </body>
 </html>
