--- a/web/app/templates/home.html
+++ b/web/app/templates/home.html
@@ -17,25 +17,28 @@
                 <ul>
                     <li>session1</li>
                     <li>session2</li>
+                    <li>session3</li>
                 </ul>
             </div>
-            <div class="greeting">
-                <p1>... 님 안녕하세요!</p1>
-            </div>
-            <div class="interaction">
-                <div id="buttons">
-                    <div id="session-button">
-                        <button id="into-session">Ask Questions Right now!></button>
-                        <button id="make-session">Create a Session</button>
+            <div class="panel">
+                <div class="greeting">
+                    <p1>{{name}}, 안녕하세요!</p1>
+                </div>
+                <div class="interaction">
+                    <div id="buttons">
+                        <div id="session-button">
+                            <button id="into-session">Ask Questions Right now!</button>
+                            <button id="make-session">Create a Session</button>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="history">
-                <ol>
-                    <li>질문한 횟수 1</li>
-                    <li>대답한 횟수 1</li>
-                    <li>저장한? 좋아요? 공감? 1</li>
-                </oi>
+                <div class="history">
+                    <ol>
+                        <li>질문한 횟수 1</li>
+                        <li>대답한 횟수 1</li>
+                        <li>저장한? 좋아요? 공감? 1</li>
+                    </oi>
+                </div>
             </div>
         </main>
         <footer>
