--- a/web/app/templates/index.html
+++ b/web/app/templates/index.html
@@ -39,10 +39,12 @@
                 <p>대충 메뉴1</p>
             </div>
             <div id="mention">
-                <p>사용된 프로그램 출처표기</p>
+                <p>powerd by Mistral AI</p>
+                <a href="https://mistral.ai/"><img src="https://upload.wikimedia.org/wikipedia/de/1/1c/Mistral_AI_logo.svg" width="60"></a>
             </div>
             <div id="info">
-                <p>만든사람 정보</p>
+                <p>경기대학교 team JAMES</p>
+                <p>github @ <a href="https://www.github.com/dasfaf4464/JAMES" target="_blank">dasfaf4464/JAMES</a></p>
             </div>
         </footer>
         <script src="../static/js/login.js"></script>
