세션 제외 frame 생성

--- a/web/app/static/css/colorset.css
+++ b/web/app/static/css/colorset.css
@@ -5,4 +5,6 @@
     --main-sessiontitle-font: #ffA221;
     --main-button-normal: #FFA323;
     --main-button-emphasize: #f0801F;
+    --history-button-1: #d08721;
+    --history-button-2: #bd7a1e;
 }
