--- a/web/app/static/css/register-style.css
+++ b/web/app/static/css/register-style.css
@@ -1,66 +1,64 @@
+@import url(colorset.css);
+
 body {
     margin: 0;
     font-family: 'Sansita', sans-serif;
-    background-color: #f8f9fa;
+    background-color: var(--main-theme-background);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 header {
-    background-color: #343a40;
-    color: white;
-    padding: 16px;
-    text-align: center;
+    width: auto;
 }
 
 main {
-    max-width: 500px;
-    margin: 40px auto;
-    padding: 24px;
-    background-color: white;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-main p {
-    margin-top: 20px;
-    margin-bottom: 5px;
-    font-weight: bold;
-    color: #333;
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-main input[type="text"],
-main input[type="number"] {
-    width: calc(100% - 20px);
-    padding: 10px;
-    margin-bottom: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-}
-
-main input[type="text"] + input[type="text"] {
-    width: 48%;
-    display: inline-block;
-}
-
-main input[type="text"]:first-of-type {
-    margin-bottom: 5px;
-}
-
-main button {
-    padding: 10px 20px;
-    background-color: #007bff;
+#create-name-button {
+    background-color: var(--main-button-emphasize);
     color: white;
+    height: auto;
+    width: 100%;
+    border-radius: 10px;
     border: none;
-    margin-top: 10px;
-    border-radius: 5px;
-    cursor: pointer;
-    font-weight: bold;
+    box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.2);
+    transition: all 0.2s ease;
 }
 
-main button:hover {
-    background-color: #0056b3;
+#create-name-button:active {
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.3);
+    transform: translateY(2px);
+}
+
+#register-button {
+    background-color: var(--main-button-normal);
+    color: white;
+    height: auto;
+    width: 100%;
+    border-radius: 10px;
+    border: none;
+    box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.2);
+    transition: all 0.2s ease;
+}
+
+#create-name-button:active {
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.3);
+    transform: translateY(2px);
 }
 
 footer {
+    width: auto;
     margin-top: 40px;
     padding: 20px;
     background-color: #f1f1f1;
