--- a/web/app/templates/history.html
+++ b/web/app/templates/history.html
@@ -6,23 +6,36 @@
     </head>
     <body>
         <header>
-            <h1>로고</h1>
             <div>
-                <p>메뉴들</p>
+                <p>{{name}}로 {{action}}지 {{day}} 일 째</p>
+                <button>메인화면</button>
+                <img src="../static/image/logo.png">
             </div>
         </header>
         <main>
-            <div>
-                <button>내가 한 질문 보기</button>
-                <button>내가 한 대답 보기</button>
-                <button>저장한 질의응답 보기</button>
+            <div id="button-box">
+                <button id="my-question" onclick="myQuestion()">나의 질문 보기</button>
+                <button id="my-answer" onclick="myAnswer()">나의 대답 보기</button>
+                <button id="saving" onclick="saving()">저장한 질의응답</button>
+                <button id="my-profile" onclick="myProfile()">나의 프로필</button>
+                <input type="text" placeholder="검색하기">
             </div>
-            <div id="content-output">
-                <p>리스트 출력</p>
+            <div id="content-box">
+                <div id="content-output">
+                    <ol>
+                        <li>
+                            <p>질문 내용  답변 개수 : </p>
+                            <li>
+                                <p>질문 내용1</p>
+                                <p>질문 내용2</p>
+                            </li>
+                        </li>
+                    </ol>
+                </div>
             </div>
         </main>
         <footer>
-
+            <p>주의사항 설명</p>
         </footer>
         <script src="../static/js/history.js"></script>
     </body>
