--- a/web/app/templates/home.html
+++ b/web/app/templates/home.html
@@ -28,8 +28,9 @@
                     </li>
                 </ul>
                 <div class="page-num">
+                    <button>◀</button>
                     <p>1/2</p>
-                    <button><img src="../static/image/"></button>
+                    <button>▶</button>
                 </div>
             </div>
             <div class="side-panel">
