--- a/web/app/templates/session.html
+++ b/web/app/templates/session.html
@@ -15,6 +15,13 @@
 </header>
 <main>
     <div id="questionList" class="container"></div>
+    <div>
+        <p>세부 내용 리스트</p>
+    </div>
+    <div id="get-from-llm">
+        <p>선택지1</p>
+        <p>선택지2</p>
+    </div>
 </main>
 <footer>
     <!-- 입력창 영역 -->
@@ -28,7 +35,7 @@
         </div>
     </form>
 </footer>
-<script src="session.js"></script>
+<script src="../static/js/session.js"></script>
 </body>
 
 
