회원가입 데이터 전송, 로그인

--- a/web/app/templates/register.html
+++ b/web/app/templates/register.html
@@ -21,7 +21,7 @@
                 <input id="pw" type="text" required placeholder="비밀번호">
                 <input id="email" type="email" required placeholder="이메일 example@mail.com">
                 <p>사용할 이름</p>
-                <input type="text" value="" readonly>
+                <input id="name-input" type="text" value="" readonly>
                 <button id="create-name-button">이름 생성하기</button>
 
                 <label>경고:</label>
@@ -31,5 +31,6 @@
         <footer>
             <p>asdfasdf</p>
         </footer>
+        <script src="../static/js/register.js" defer></script>
     </body>
 </html>
