--- a/web/app/templates/index.html
+++ b/web/app/templates/index.html
@@ -25,7 +25,7 @@
                 </form>
                 <div id="register">
                     <p>혹시 <span>회원</span>이 아닙니까?</p>
-                    <button id="register-button">회원가입</button>
+                    <button id="register-button" onclick="window.location.href='/register'">회원가입</button>
                 </div>
                 <p>로그인 없이 사용하기</p>
                 <button id='create-session-button' type="button">세션 생성하기</button>
