--- a/web/app/static/css/index-style.css
+++ b/web/app/static/css/index-style.css
@@ -2,7 +2,7 @@
 
 body {
     margin: 0;
-    font-family: 'Sansita', sans-serif;
+    font-family: 'Gill Sans', sans-serif;
     background: var(--main-theme-background);
     display: flex;
     flex-direction: column;
@@ -10,19 +10,28 @@ body {
 }
 
 main {
+    flex: 1;
     display: flex;
     padding: 0;
     gap: 0;
+
+}
+
+header, main, footer {
+    flex-shrink: 0;
 }
 
 .main-image {
+    display: flex;  /* flexbox를 사용하여 자식 요소를 중앙 정렬 */
+    justify-content: center; /* 수평 중앙 정렬 */
+    align-items: center; /* 수직 중앙 정렬 */
     flex: 3;
 }
 
 .main-image img {
     width: 100%;
     height: auto;
-    max-width: 600px;
+    max-width: 800px;
 }
 
 .interaction {
@@ -31,6 +40,7 @@ main {
     flex-direction: column;
     margin: 20px;
     align-items: center;
+    transform: translateX(-40px);
 }
 
 .interaction img {
@@ -44,8 +54,25 @@ main {
     flex-direction: column;
 }
 
+#password {
+    margin-top: 5px;
+}
+
 #login input{
     padding-left: 20px;
+}
+
+.button-unified {
+    width: 100%;
+    max-width: 300px; /* 최대 너비 제한 */
+    padding: 10px;
+    border-radius: 10px;
+    border: none;
+    box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.2);
+    transition: all 0.2s ease;
+    font-size: 1rem;
+    margin: 5px auto;
+    display: block;
 }
 
 #login-button {
@@ -55,6 +82,8 @@ main {
     width: 100%;
     border-radius: 10px;
     border: none;
+    padding: 8px;
+    margin-top: 5px;
     box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.2);
     transition: all 0.2s ease;
 }
@@ -76,6 +105,14 @@ main {
 #register-button {
     background-color: #ffffff;
     color: var(--main-theme-emphasize);
+    height: auto;
+    width: 100%;
+    border-radius: 10px;
+    border: none;
+    padding: 8px;
+    margin-top: 5px;
+    box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.2);
+    transition: all 0.2s ease;
 }
 
 #create-session-button {
@@ -85,6 +122,8 @@ main {
     width: 100%;
     border-radius: 10px;
     border: none;
+    padding: 8px;
+    margin-top: 5px;
     box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.2);
     transition: all 0.2s ease;
 }
@@ -106,6 +145,8 @@ main {
     width: 100%;
     border-radius: 10px;
     border: none;
+    padding: 8px;
+    margin-top: 5px;
     box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.2);
     transition: all 0.2s ease;
 }
@@ -116,6 +157,7 @@ main {
 }
 
 #session input {
+    margin-top: 5px;
     padding-left: 20px;
 }
 
@@ -124,9 +166,11 @@ main {
 }
 
 footer {
+    flex: 0 0 10%;
     display: flex;
     justify-content: space-between;
     background-color: rgba(0, 0, 0, 0.2);
     padding: 1rem;
     font-size: 0.9rem;
 }
+
