--- a/web/app/templates/home.html
+++ b/web/app/templates/home.html
@@ -1,68 +1,76 @@
 <!DOCTYPE html>
 <html lang="ko">
-    <head>
-        <meta charset="UTF-8">
-        <link rel="stylesheet" href="../static/css/home-style.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Sansita&display=swap" rel="stylesheet">
-        <title>UnMute</title>
-    </head>
-    <body>
-        <header>
-        </header>
-        <main>
-            <div class="session-list">
-                <img src="../static/image/logo.png">
+
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="../static/css/home-style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sansita&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css">
+
+    <title>UnMute</title>
+</head>
+
+<body>
+    <header>
+        <img src="../static/image/logo.png">
+    </header>
+    <main>
+        <div class="session-list">
+            <ul class="session-group">
+                <li class="session-group-item">
+                    <p id="session-title">세션 제목</p>
+                    <p id="session-info">현재 입장 인원: <br>질문 수:</p>
+                    <p id="session-period">임시</p>
+                    <img id="session-icon" src="../static/image/computer.svg">
+                </li>
+                <li class="session-group-item">
+                    <p id="session-title">세션 제목</p>
+                    <p id="session-info">현재 입장 인원: <br>질문 수:</p>
+                    <p id="session-period">영구</p>
+                </li>
+            </ul>
+            <div class="page-num">
+                <button id = "frontB">◀</button>
+                <button id = "backB">▶</button>
+            </div>
+        </div>
+        <div class="side-panel">
+            <div class="greeting">
+                <h1>My histroy</h1>
+                <p>{{name}}, 안녕하세요!</p>
+            </div>
+            <div class="history">
                 <ul>
-                    <li>
-                        <p id="session-title">세션 제목</p>
-                        <p id="session-info">현재 입장 인원: / 질문 수:</p>
-                        <p id="session-period">임시</p>
-                        <img id="session-icon" src="../static/image/computer.svg">
-                    </li>
-                    <li>
-                        <p id="session-title">세션 제목</p>
-                        <p id="session-info">현재 입장 인원: / 질문 수:</p>
-                        <p id="session-period">영구</p>
-                    </li>
+                    <li>질문한 횟수 : {{list.question}}</li>
+                    <li>대답한 횟수 : {{list.answer}}</li>
+                    <li>저장한 질문 갯수 : {{list.saving}}</li>
                 </ul>
-                <div class="page-num">
-                    <button>◀</button>
-                    <p>1/2</p>
-                    <button>▶</button>
-                </div>
             </div>
-            <div class="side-panel">
-                <div class="greeting">
-                    <p>{{name}}, 안녕하세요!</p>
-                    <canvas></canvas>
-                </div>
-                <div class="history">
-                    <ul>
-                        <li>질문한 횟수 : {{list.question}}</li>
-                        <li>대답한 횟수 : {{list.answer}}</li>
-                        <li>저장한 질문 갯수 : {{list.saving}}</li>
-                    </ul>
-                </div>
+            <form>
+                <label>아직 세션이 없으신가요?</label>
                 <button id="create-session-button">세션 만들기</button>
-                <form>
-                    <button id="into-session-button">코드로 세션 입장</button>
-                    <input id="session-code" type="text" required placeholder="세션 코드 입력">
-                </form>
-            </div>
-        </main>
-        <footer>
-            <div id="menu">
-                <p>대충 메뉴1</p>
-            </div>
-            <div id="mention">
-                <p>사용된 프로그램 출처표기</p>
-            </div>
-            <div id="info">
-                <p>만든사람 정보</p>
-            </div>
-        </footer>
-        <script src="../static/js/home.js"></script>
-    </body>
+                <label>새로운 세션에 참여하세요</label>
+                <button id="into-session-button">코드로 세션 입장</button>
+                <input id="session-code" class="form-control rounded" type="text" required placeholder="세션 코드 입력">
+            </form>
+        </div>
+    </main>
+    <footer>
+        <div id="menu">
+            <p><a href="">사이트 이용 정보</a></p>
+        </div>
+        <div id="mention">
+            <p>powerd by Mistral AI</p>
+            <a href="https://mistral.ai/"><img src="https://upload.wikimedia.org/wikipedia/de/1/1c/Mistral_AI_logo.svg" width="60"></a>
+        </div>
+        <div id="info">
+            <p>경기대학교 team JAMES</p>
+            <p>github @ <a href="https://www.github.com/dasfaf4464/JAMES" target="_blank">dasfaf4464/JAMES</a></p>
+        </div>
+    </footer>
+    <script src="../static/js/home.js"></script>
+</body>
+
 </html>
