--- a/web/app/static/css/register-style.css
+++ b/web/app/static/css/register-style.css
@@ -7,6 +7,7 @@ body {
     display: flex;
     flex-direction: column;
     height: 100vh;
+    gap: 1rem;
 }
 
 header {
@@ -14,7 +15,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: white;
+    background-color: var(--main-theme-background);
 }
 
 header img {
@@ -24,6 +25,7 @@ header img {
     object-fit: contain;
 }
 
+
 main {
     flex: 1;
     display: flex;
@@ -31,7 +33,9 @@ main {
     align-items: center;
 }
 
-header, main, footer {
+header,
+main,
+footer {
     flex-shrink: 0;
 }
 
@@ -47,9 +51,9 @@ form {
     font-size: 14px;
 }
 
-p {
- text-align: left;
- color: lightgray;
+.idEx p {
+    text-align: left;
+    color: lightgray;
 }
 
 #create-name-button {
@@ -92,7 +96,38 @@ footer {
     flex: 0 0 10%;
     display: flex;
     justify-content: space-between;
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color: #FFEBE0;
     padding: 1rem;
     font-size: 0.9rem;
+}
+
+@media (max-width: 768px) {
+    main {
+        flex-direction: column;
+    }
+
+    .session-list,
+    .side-panel {
+        flex: unset;
+        width: 100%;
+    }
+
+    header img {
+        width: 40%;
+    }
+
+    .session-group-item {
+        flex-direction: column;
+    }
+
+    form {
+        width: 95%;
+    }
+
+    footer {
+        flex-direction: column;
+        font-size: 0.8rem;
+        align-items: center;
+        text-align: center;
+    }
 }
