--- a/web/app/templates/history.html
+++ b/web/app/templates/history.html
@@ -1,43 +1,60 @@
 <!DOCTYPE html>
 <html lang="ko">
-    <head>
-        <meta charset="UTF-8">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css">
-        <link rel="stylesheet" href="../static/css/history-style.css">
-    </head>
-    <body>
-        <header>
-            <img src="../static/image/logo.png">
-        </header>
-        <main>
-            <p>{{name}}로 {{action}}지 {{day}} 일 째</p>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../static/css/history-style.css">
+</head>
+
+<body>
+    <header>
+        <img src="../static/image/logo.png">
+    </header>
+    <main>
+        <div class="status-bar">
+            <p>{{name}}로 <span id="action-text">{{action}}</span> {{day}} 일 째</p>
             <button>메인화면</button>
-            <div class="history-box">
+        </div>
+        <div class="history-box">
             <div id="button-box">
-                <button id="my-question" onclick="myQuestion()">나의 질문 보기</button>
-                <button id="my-answer" onclick="myAnswer()">나의 대답 보기</button>
-                <button id="saving" onclick="saving()">저장한 질의응답</button>
-                <button id="my-profile" onclick="myProfile()">나의 프로필</button>
+                <button id="my-question" class="tab-button selected" onclick="myQuestion()">나의 질문 보기</button>
+                <button id="my-answer" class="tab-button" onclick="myAnswer()">나의 대답 보기</button>
+                <button id="saving" class="tab-button" onclick="saving()">저장한 질의응답</button>
+                <button id="my-profile" class="tab-button" onclick="myProfile()">나의 프로필</button>
                 <input class="form-control rounded" type="text" placeholder="검색하기">
             </div>
             <div id="content-box">
                 <div id="content-output">
                     <ol>
                         <li>
-                            <p>질문 내용  답변 개수 : </p>
-                            <li>
-                                <p>질문 내용1</p>
-                                <p>질문 내용2</p>
-                            </li>
+                            <p>질문 내용 답변 개수 : </p>
+                        <li>
+                            <p>질문 내용1</p>
+                            <p>질문 내용2</p>
+                        </li>
                         </li>
                     </ol>
                 </div>
             </div>
         </div>
-        </main>
-        <footer>
-            <p>주의사항 설명</p>
-        </footer>
+    </main>
+    <footer>
+        <div id="menu">
+            <p><a href="">사이트 이용 정보</a></p>
+        </div>
+        <div id="mention">
+            <p>powerd by Mistral AI</p>
+            <a href="https://mistral.ai/"><img src="https://upload.wikimedia.org/wikipedia/de/1/1c/Mistral_AI_logo.svg"
+                    width="60"></a>
+        </div>
+        <div id="info">
+            <p>경기대학교 team JAMES</p>
+            <p>github @ <a href="https://www.github.com/dasfaf4464/JAMES" target="_blank">dasfaf4464/JAMES</a></p>
+        </div>
         <script src="../static/js/history.js"></script>
-    </body>
+    </footer>
+</body>
+
 </html>
