--- a/web/app/templates/home.html
+++ b/web/app/templates/home.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../static/css/home-style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -42,6 +43,7 @@
                 <p>{{name}}, 안녕하세요!</p>
             </div>
             <div class="history">
+                <canvas></canvas>
                 <ul>
                     <li>질문한 횟수 : {{list.question}}</li>
                     <li>대답한 횟수 : {{list.answer}}</li>
