--- a/web/app/templates/register.html
+++ b/web/app/templates/register.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Sansita&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../static/css/register-style.css">
-    <title>UnMute-register</title>
+    <title>UnMute</title>
 </head>
 
 <body>
@@ -30,7 +30,7 @@
                 </div>
                 <input id="email" type="email" class="form-control rounded" required placeholder="이메일 example@mail.com">
                 <br><label>사용할 이름</label>
-                <input type="text" class="form-control rounded" value="" readonly>
+                <input id="name-input" type="text" class="form-control rounded" value="" readonly>
                 <button id="create-name-button">이름 생성하기</button>
                 <button id="register-button">계정 생성하기</button>
             </div>
