사용자 강제 쿠키 삭제시 로그아웃 처리, 로그아웃 기능 추가

--- a/web/app/templates/home.html
+++ b/web/app/templates/home.html
@@ -16,6 +16,7 @@
 <body>
     <header>
         <img src="../static/image/logo.png">
+        <button id="logout-button">로그아웃</button>
     </header>
     <main>
         <div class="session-list">
