--- a/web/app/templates/session.html
+++ b/web/app/templates/session.html
@@ -3,18 +3,19 @@
 
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>세션 페이지지</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>세션 페이지</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../static/css/session-style.css">
 </head>
+
 <body>
     <header>
         <img src="../static/image/logo.png">
     </header>
-  
+
     <main>
-      
+
         <div class="left-panel">
             <div class="categories">
                 <div class="category-box">카테고리1</div>
